<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="Title">My Nanodegree Apps !</string>
    <string name="Spotify_streamer_btn_title">SPOTIFY STREAMER</string>
    <string name="Scores_app_btn_title">SCORES APP</string>
    <string name="library_app_btn_title">LIBRARY APP</string>
    <string name="build_it_bigger_btn_title">BUILD IT BIGGER</string>
    <string name="xyz_reader_btn_title">XYZ READER</string>
    <string name="capstone_my_own_app_btn_title">CAPSTONE: MY OWN APP</string>

</resources>
