<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    style="@style/MyAppPortfolioTextView">

    <TextView android:text="@string/Title" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/MyAppPortfolioTextView"
        android:id="@+id/Title"
        android:gravity="center"
        android:layout_gravity="center|right"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Spotify_streamer_btn_title"
        android:id="@+id/spotify_streamer_btn"
        android:layout_below="@+id/Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:gravity="center"
        style="@style/MyAppPortfolioTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/Scores_app_btn_title"
        android:id="@+id/scores_app_btn"
        android:gravity="center_vertical|center_horizontal"
        android:layout_below="@+id/spotify_streamer_btn"
        android:layout_alignLeft="@+id/capstone_btn"
        android:layout_alignStart="@+id/capstone_btn"
        style="@style/MyAppPortfolioTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/library_app_btn_title"
        android:id="@+id/library_app_btn"
        android:layout_below="@+id/scores_app_btn"
        android:layout_alignLeft="@+id/scores_app_btn"
        android:layout_alignStart="@+id/scores_app_btn"
        android:gravity="center"
        style="@style/MyAppPortfolioTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/xyz_reader_btn_title"
        android:id="@+id/xyz_reader_btn"
        android:gravity="center"
        android:layout_below="@+id/build_it_bigger_btn"
        android:layout_alignLeft="@+id/build_it_bigger_btn"
        android:layout_alignStart="@+id/build_it_bigger_btn"
        style="@style/MyAppPortfolioTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger_btn_title"
        android:id="@+id/build_it_bigger_btn"
        android:layout_below="@+id/library_app_btn"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        style="@style/MyAppPortfolioTextView" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/capstone_my_own_app_btn_title"
        android:id="@+id/capstone_btn"
        android:gravity="center"
        android:layout_below="@+id/xyz_reader_btn"
        android:layout_alignLeft="@+id/xyz_reader_btn"
        android:layout_alignStart="@+id/xyz_reader_btn"
        style="@style/MyAppPortfolioTextView" />

</RelativeLayout>
